--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,27 @@ dependencies {
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.36'
 
+    testImplementation 'io.cucumber:cucumber-spring:7.15.0'
+    testImplementation 'io.cucumber:cucumber-java:7.15.0'
+    testImplementation 'io.cucumber:cucumber-junit:7.15.0'
+    testImplementation 'org.junit.vintage:junit-vintage-engine'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-security'
+
+    testImplementation 'io.cucumber:cucumber-spring:7.12.0'
+    testImplementation 'io.cucumber:cucumber-junit:7.12.0'
+    testImplementation 'org.junit.platform:junit-platform-suite:1.9.3'
+
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+    filter {
+        includeTestsMatching "com.kuro.coffechain.cucumber.*"
+    }
 }
