--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     testImplementation 'io.cucumber:cucumber-junit:7.12.0'
     testImplementation 'org.junit.platform:junit-platform-suite:1.9.3'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'org.modelmapper:modelmapper:3.1.1'
+
 }
 
 tasks.named('test') {
