--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,10 @@ spring:
 
   liquibase:
     change-log: classpath:db/changelog/master.yaml
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
