--- a/src/main/resources/db/changelog/master.yaml
+++ b/src/main/resources/db/changelog/master.yaml
@@ -1,5 +1,7 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/01.create-user-table.yaml
+      file: db/changelog/01.init-tables.yaml
   - include:
-      file: db/changelog/02.insert-users.yaml
+      file: db/changelog/02.insert-data.yaml
+  - include:
+      file: db/changelog/03.init-admin.yaml
