--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.36'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.36'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
 
     testImplementation 'io.cucumber:cucumber-spring:7.15.0'
     testImplementation 'io.cucumber:cucumber-java:7.15.0'
@@ -56,6 +60,10 @@ tasks.withType(Test).configureEach {
     filter {
         includeTestsMatching "com.kuro.coffechain.cucumber.*"
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file("$buildDir/generated/sources/annotationProcessor/java/main")
 }
 
 
