--- a/src/main/docker/kafka.yml
+++ b/src/main/docker/kafka.yml
@@ -1,4 +1,4 @@
-# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
+# Can you kafka for async request and realtime reponse.
 name: coffechain
 services:
   kafka:
