--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,12 @@ spring:
   liquibase:
     change-log: classpath:db/changelog/master.yaml
 
+logging:
+  level:
+    org:
+      springframework.security: DEBUG
+      com.fasterxml.jackson: DEBUG
+
 springdoc:
   api-docs:
     path: /v3/api-docs
